# robot-follower-ROS

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  README.md  package.xml
.github/workflows/: ci.yml
docs/: technical-notes.md
scripts/: ball_tracker_from_topic_vision.py  ball_tracker_webcam.py  follower_lidar.py  follower_vision.py  trackbars.py
tests/: test_scripts_compile.py
