<?xml version="1.0"?>
<package format="2">
  <name>robot_follower</name>
  <version>0.1.0</version>
  <description>ROS 1 package for object following with vision and LiDAR pipelines.</description>

  <maintainer email="cristian.714@hotmail.com">Cristian Rodriguez</maintainer>

  <license>UNLICENSED</license>

  <url type="repository">https://github.com/crisdanrodriguez/robot_follower_ROS</url>

  <author email="cristian.714@hotmail.com">Cristian Rodriguez</author>
  <author email="a01702974@tec.mx">Kamil Nahhas</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
</package>
